tests/checker/diagnostics/0293_fun_self_application_06.ml.infer.expected
File "0293_fun_self_application_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0293_fun_self_application_06 is not a valid module name.

File "0293_fun_self_application_06.ml", line 1, characters 19-20:
1 | let bad_zeta x = x x
                       ^
Error: The value x has type 'a -> 'b but an expression was expected of type
         'a
       The type variable 'a occurs inside 'a -> 'b
